--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "ball": "node out/main bullets ball",
         "ap": "node out/main bullets ap",
         "apds": "node out/main bullets apds",
+        "hp": "node out/main bullets hp",
         "flechette": "node out/main flechettes",
         "grenade": "node out/main grenades",
         "max-ranges": "node out/maximum-range",
