--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "license": "MIT",
     "version": "0.0.1",
     "scripts": {
-        "ball": "node out/main bullets ball",
-        "ap": "node out/main bullets ap",
-        "apds": "node out/main bullets apds",
+        "fmj": "node out/main bullets fmj",
+        "tp": "node out/main bullets tp",
+        "du": "node out/main bullets du",
         "hp": "node out/main bullets hp",
         "flechette": "node out/main flechettes",
         "grenade": "node out/main grenades",
         "max-ranges": "node out/maximum-range",
-        "ball-reference": "node out/main bullets ball reference",
-        "ap-reference": "node out/main bullets ap reference"
+        "fmj-reference": "node out/main bullets fmj reference",
+        "tp-reference": "node out/main bullets tp reference"
     },
     "devDependencies": {
         "typescript": "2.9.2",
