For the CyberPunk 2020 fans

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "shadowrun-ranged-combat",
+    "name": "cyberpunk-rpg-ranged-combat",
     "author": {
         "name": "Simon Haisz"
     },
