--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "tap": "node out/main bullets tap",
         "du": "node out/main bullets du",
         "hp": "node out/main bullets hp",
+        "gel": "node out/main bullets gel",
         "flechette": "node out/main flechettes",
         "grenade": "node out/main grenades",
         "max-ranges": "node out/maximum-range",
