--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,13 @@
         "downlevelIteration": true,
         "module": "commonjs",
         "moduleResolution": "node",
-        "outDir": "./out"
+        "outDir": "./out",
+        "skipLibCheck": true
     },
     "include": [
         "src/**/*.ts"
+    ],
+    "exclude": [
+        "node_modules"
     ]
 }
