some changes (yeah, I know descriptive)

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
         "build": "tsc",
         "clean": "rimraf -rf out",
         "start": "node out/main ",
-        "fmj": "node out/main bullets fmj",
-        "tap": "node out/main bullets tap",
-        "du": "node out/main bullets du",
-        "hp": "node out/main bullets hp",
-        "gel": "node out/main bullets gel",
-        "flechette": "node out/main flechettes du",
+        "fmj": "node out/main --type bullets --piercing fmj",
+        "tap": "node out/main --type bullets --piercing tap",
+        "du": "node out/main --type bullets --piercing du",
+        "hp": "node out/main --type bullets --piercing hp",
+        "gel": "node out/main --type bullets --piercing gel",
+        "flechette": "node out/main --type flechettes --piercing du",
         "grenade": "node out/main grenades",
         "max-ranges": "node out/maximum-range",
         "fmj-ref": "node out/main bullets fmj reference",
